--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -1378,5 +1378,8 @@
     <string name="please_enter_a_valid_year_of_birth">fadlan geli sannad dhalasho oo sax ah</string>
     <string name="please_enter_a_valid_year_between_1900_and">fadlan geli sannad sax ah oo u dhexeeya 1900 iyo %1$d</string>
     <string name="redo_survey">Dib u samee sahanka</string>
+    <string name="resource_not_found_in_database">Kheyraadka laguma helin kaydka xogta</string>
+    <string name="resource_has_no_attachments">Kheyraadka ma laha faylal la soo dejisan karo</string>
+    <string name="unable_to_download_resource">Lama soo dejin karo kheyraadka</string>
 
 </resources>
