resources: smoother html apps downloading (fixes #8598) (#8663)
Co-authored-by: dogi <dogi@users.noreply.github.com>

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1377,5 +1377,8 @@
     <string name="please_enter_a_valid_year_of_birth">por favor ingrese un año de nacimiento válido</string>
     <string name="please_enter_a_valid_year_between_1900_and">por favor ingrese un año válido entre 1900 y %1$d</string>
     <string name="redo_survey">volver a hacer la encuesta</string>
+    <string name="resource_not_found_in_database">Recurso no encontrado en la base de datos</string>
+    <string name="resource_has_no_attachments">El recurso no tiene archivos descargables</string>
+    <string name="unable_to_download_resource">No se puede descargar el recurso</string>
 
 </resources>
