--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -750,6 +750,7 @@
     <string name="thank_you_for_taking_this_survey">Thank you for taking this survey.</string>
     <string name="complete">complete</string>
     <string name="no_questions_available">No questions available</string>
+    <string name="unable_to_create_submission">Unable to start the survey. Please try again.</string>
     <string name="please_select_write_your_answer_to_continue">Please select / write your answer to continue</string>
     <string name="graded">graded</string>
     <string name="pending">pending</string>
