--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -95,6 +95,7 @@
     <string name="type">प्रकार:</string>
     <string name="resource_colon">स्रोत:</string>
     <string name="your_rating">तपाईंको मत *</string>
+    <string name="loading_user_profile">तपाईंको प्रोफाइल तयार गर्दै…</string>
     <string name="your_comment">तपाईंको टिप्पणी छोड्नुहोस्</string>
     <string name="show_top_nav">ड्यासबोर्डमा शीर्ष नेभिगेशन पट्ट देखाउनुहोस्</string>
     <string name="sync_now">अहिले सिङ्क गर्नुहोस्</string>
