--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -1333,5 +1333,6 @@
     <string name="resource_not_found_in_database">डाटाबेसमा स्रोत फेला परेन</string>
     <string name="resource_has_no_attachments">स्रोतसँग कुनै डाउनलोड योग्य फाइलहरू छैनन्</string>
     <string name="unable_to_download_resource">स्रोत डाउनलोड गर्न असमर्थ</string>
+    <string name="hide_new_message">नयाँ सन्देश लुकाउनुहोस्</string>
 
 </resources>
