--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="middle_name">Middle Name</string>
     <string name="first_name">First Name</string>
     <string name="search_dots">Search…</string>
+    <string name="btn_remove_lib">Remove</string>
     <string name="download">Download</string>
     <string name="published_by">Published By:</string>
     <string name="author">Author:</string>
