--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,10 @@
     <string name="hint_name">username</string>
     <string name="btn_back">Back</string>
     <string name="btn_sign_in">Sign In</string>
+    <string name="btn_sync">Sync</string>
     <string name="select_team">select team</string>
     <string name="btn_sync_save">Save</string>
+    <string name="btn_sync_cancel">Cancel</string>
     <string name="err_msg_name">Enter your username</string>
     <string name="err_msg_password">Enter the password</string>
     <string name="err_msg_login">Username and/or password do not match</string>
