--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -19,8 +19,10 @@
     <string name="hint_name">Magaca isticmaalaha</string>
     <string name="btn_back">Dib</string>
     <string name="btn_sign_in">Soo gal</string>
+    <string name="btn_sync">Isku xidh </string>
     <string name="btn_sync_save">Keyd</string>
     <string name="select_team">xulo koox</string>
+    <string name="btn_sync_cancel">burin</string>
     <string name="err_msg_name">Geli magaca isticmaalaha</string>
     <string name="err_msg_password">Geli erayga sirta ah</string>
     <string name="err_msg_login">Magaca isticmaalaha iyo/ama erayga sirta ah isma dhigmaan</string>
