--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -19,8 +19,10 @@
     <string name="hint_name">प्रयोगकर्तानाम</string>
     <string name="btn_back">पछाडी जाउ</string>
     <string name="btn_sign_in">साइन इन गर्नुहोस्</string>
+    <string name="btn_sync">सिङ्क</string>
     <string name="select_team">टोली चयन गर्नुहोस्</string>
     <string name="btn_sync_save">सुरक्षित गर्नुहोस्</string>
+    <string name="btn_sync_cancel">रद्द गर्नुहोस्</string>
     <string name="err_msg_name">तपाईंको प्रयोगकर्तानाम लेख्नुहोस्</string>
     <string name="err_msg_password">पासवर्ड लेख्नुहोस्</string>
     <string name="err_msg_login">प्रयोगकर्तानाम र/वा पासवर्ड मेल खान्छैन</string>
