--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -83,6 +83,7 @@
     <string name="middle_name">Magaca Dhexe</string>
     <string name="first_name">Magaca koowaad</string>
     <string name="search_dots">Raadi…</string>
+    <string name="btn_remove_lib">saar </string>
     <string name="download">Download</string>
     <string name="published_by">Waxaa daabacay:</string>
     <string name="author">Qoraaga:</string>
