--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1170,5 +1170,8 @@
     <string name="resource_has_no_attachments">El recurso no tiene archivos descargables</string>
     <string name="unable_to_download_resource">No se puede descargar el recurso</string>
     <string name="hide_new_message">Ocultar nuevo mensaje</string>
+    <string name="cannot_assign_completed_task">No se puede asignar una tarea completada</string>
+    <string name="assign_to">Asignar a (Opcional)</string>
+    <string name="click_to_assign_member">Haz clic para asignar un miembro del equipo</string>
 
 </resources>
