--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1170,5 +1170,8 @@
     <string name="resource_has_no_attachments">La ressource n’a pas de fichiers téléchargeables</string>
     <string name="unable_to_download_resource">Impossible de télécharger la ressource</string>
     <string name="hide_new_message">Masquer le nouveau message</string>
+    <string name="cannot_assign_completed_task">Impossible d\'attribuer une tâche terminée</string>
+    <string name="assign_to">Attribuer à (Optionnel)</string>
+    <string name="click_to_assign_member">Cliquez pour attribuer un membre de l\'équipe</string>
 
 </resources>
