--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -1170,5 +1170,8 @@
     <string name="resource_has_no_attachments">स्रोतसँग कुनै डाउनलोड योग्य फाइलहरू छैनन्</string>
     <string name="unable_to_download_resource">स्रोत डाउनलोड गर्न असमर्थ</string>
     <string name="hide_new_message">नयाँ सन्देश लुकाउनुहोस्</string>
+    <string name="cannot_assign_completed_task">पूरा भएको कार्य सौंप्न सकिँदैन</string>
+    <string name="assign_to">सौंप्नुहोस् (वैकल्पिक)</string>
+    <string name="click_to_assign_member">टोली सदस्य सौंप्न क्लिक गर्नुहोस्</string>
 
 </resources>
