--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1170,5 +1170,8 @@
     <string name="resource_has_no_attachments">Resource has no downloadable files</string>
     <string name="unable_to_download_resource">Unable to download resource</string>
     <string name="hide_new_message">Hide new message</string>
+    <string name="cannot_assign_completed_task">Cannot assign completed task</string>
+    <string name="assign_to">Assign To (Optional)</string>
+    <string name="click_to_assign_member">Click to assign a team member</string>
 
 </resources>
