--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1173,5 +1173,7 @@
     <string name="cannot_assign_completed_task">لا يمكن تعيين مهمة مكتملة</string>
     <string name="assign_to">تعيين إلى (اختياري)</string>
     <string name="click_to_assign_member">انقر لتعيين عضو الفريق</string>
+    <string name="saving">جار الحفظ…</string>
+    <string name="achievement_saved">تم تحديث الإنجاز</string>
 
 </resources>
