--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -162,6 +162,7 @@
     <string name="showing_reply_of">उत्तर देखाउँदै:</string>
     <string name="open_date">खोल्ने मिति</string>
     <string name="my_survey">mySurveys</string>
+    <string name="failed_to_load_course">पाठ्यक्रम लोड गर्न असफल भयो</string>
     <string name="cannot_remove_user">प्रयोगकर्ता हटाउन सकिएन</string>
     <string name="no_members_task">कार्य सौंपन टोली सदस्यहरू उपस्थित छैनन्</string>
     <string name="no_member_selected">कुनै सदस्य चयन गरिएको छैन। कृपया फेरि प्रयास गर्नुहोस्</string>
