--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,7 @@
     <string name="showing_reply_of">Showing reply of:</string>
     <string name="open_date">Open Date</string>
     <string name="my_survey">mySurveys</string>
+    <string name="failed_to_load_course">Failed to load course</string>
     <string name="cannot_remove_user">User could not be removed</string>
     <string name="no_members_task">No Team members present to assign tasks</string>
     <string name="no_member_selected">No member selected. Please try again</string>
