--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1175,5 +1175,7 @@
     <string name="click_to_assign_member">انقر لتعيين عضو الفريق</string>
     <string name="saving">جار الحفظ…</string>
     <string name="achievement_saved">تم تحديث الإنجاز</string>
+    <string name="team_name_already_exists">فريق بهذا الاسم موجود بالفعل</string>
+    <string name="enterprise_name_already_exists">مؤسسة بهذا الاسم موجودة بالفعل</string>
 
 </resources>
