--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1175,5 +1175,7 @@
     <string name="click_to_assign_member">Haz clic para asignar un miembro del equipo</string>
     <string name="saving">Guardando…</string>
     <string name="achievement_saved">Logro actualizado</string>
+    <string name="team_name_already_exists">Ya existe un equipo con este nombre</string>
+    <string name="enterprise_name_already_exists">Ya existe una empresa con este nombre</string>
 
 </resources>
