--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1175,5 +1175,7 @@
     <string name="click_to_assign_member">Cliquez pour attribuer un membre de l\'équipe</string>
     <string name="saving">Enregistrement…</string>
     <string name="achievement_saved">Réalisation mise à jour</string>
+    <string name="team_name_already_exists">Une équipe avec ce nom existe déjà</string>
+    <string name="enterprise_name_already_exists">Une entreprise avec ce nom existe déjà</string>
 
 </resources>
