--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -1175,5 +1175,7 @@
     <string name="click_to_assign_member">Guji si aad u doorato xubin koox</string>
     <string name="saving">Keydinaya…</string>
     <string name="achievement_saved">Guusha waa la cusbooneysiiyay</string>
+    <string name="team_name_already_exists">Koox magacaan leh ayaa horay u jiray</string>
+    <string name="enterprise_name_already_exists">Shirkad magacaan leh ayaa horay u jirtay</string>
 
 </resources>
