--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1175,5 +1175,7 @@
     <string name="click_to_assign_member">Click to assign a team member</string>
     <string name="saving">Saving…</string>
     <string name="achievement_saved">Achievement Updated</string>
+    <string name="team_name_already_exists">A team with this name already exists</string>
+    <string name="enterprise_name_already_exists">An enterprise with this name already exists</string>
 
 </resources>
