--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -1177,5 +1177,6 @@
     <string name="achievement_saved">उपलब्धि अद्यावधिक गरियो</string>
     <string name="team_name_already_exists">यो नामको टोली पहिले नै अवस्थित छ</string>
     <string name="enterprise_name_already_exists">यो नामको उद्यम पहिले नै अवस्थित छ</string>
+    <string name="app_theme">एप थिम</string>
 
 </resources>
