--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -1177,5 +1177,6 @@
     <string name="achievement_saved">Guusha waa la cusbooneysiiyay</string>
     <string name="team_name_already_exists">Koox magacaan leh ayaa horay u jiray</string>
     <string name="enterprise_name_already_exists">Shirkad magacaan leh ayaa horay u jirtay</string>
+    <string name="app_theme">Mawduuca app-ka</string>
 
 </resources>
