--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1177,5 +1177,6 @@
     <string name="achievement_saved">Achievement Updated</string>
     <string name="team_name_already_exists">A team with this name already exists</string>
     <string name="enterprise_name_already_exists">An enterprise with this name already exists</string>
+    <string name="app_theme">App theme</string>
 
 </resources>
