--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -1179,5 +1179,6 @@
     <string name="enterprise_name_already_exists">Shirkad magacaan leh ayaa horay u jirtay</string>
     <string name="downloading_images_please_check_notification">Sawirada waa la soo dejinayaa, fadlan eeg ogeysiiska…</string>
     <string name="no_images_to_download">Ma jiraan sawiro la soo dejinayo</string>
+    <string name="app_theme">Mawduuca app-ka</string>
 
 </resources>
