--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1179,5 +1179,6 @@
     <string name="enterprise_name_already_exists">Ya existe una empresa con este nombre</string>
     <string name="downloading_images_please_check_notification">Descargando imágenes, por favor revise las notificaciones…</string>
     <string name="no_images_to_download">No hay imágenes para descargar</string>
+    <string name="app_theme">Tema de la aplicación</string>
 
 </resources>
