--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1179,5 +1179,6 @@
     <string name="enterprise_name_already_exists">An enterprise with this name already exists</string>
     <string name="downloading_images_please_check_notification">Downloading images, please check notification…</string>
     <string name="no_images_to_download">No images to download</string>
+    <string name="app_theme">app theme</string>
 
 </resources>
