--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1180,5 +1180,6 @@
     <string name="downloading_images_please_check_notification">Downloading images, please check notification…</string>
     <string name="no_images_to_download">No images to download</string>
     <string name="app_theme">app theme</string>
+    <string name="team_surveys">Team surveys</string>
 
 </resources>
