--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1180,5 +1180,6 @@
     <string name="downloading_images_please_check_notification">جارٍ تنزيل الصور، يرجى التحقق من الإشعار…</string>
     <string name="no_images_to_download">لا توجد صور لتنزيلها</string>
     <string name="app_theme">سمة التطبيق</string>
+    <string name="team_surveys">استطلاعات الفريق</string>
 
 </resources>
