--- a/app/src/main/res/values-ne/strings.xml
+++ b/app/src/main/res/values-ne/strings.xml
@@ -1180,5 +1180,6 @@
     <string name="downloading_images_please_check_notification">तस्बिरहरू डाउनलोड हुँदैछ, कृपया सूचना जाँच गर्नुहोस्…</string>
     <string name="no_images_to_download">डाउनलोड गर्नका लागि कुनै तस्बिरहरू छैनन्</string>
     <string name="app_theme">एप थिम</string>
+    <string name="team_surveys">टोली सर्वेक्षणहरू</string>
 
 </resources>
