--- a/app/src/main/res/values-so/strings.xml
+++ b/app/src/main/res/values-so/strings.xml
@@ -1181,5 +1181,6 @@
     <string name="no_images_to_download">Ma jiraan sawiro la soo dejinayo</string>
     <string name="app_theme">Mawduuca app-ka</string>
     <string name="team_surveys">Sahaminta kooxda</string>
+    <string name="select_courses">Dooro koorsooyin</string>
 
 </resources>
