--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1181,5 +1181,6 @@
     <string name="no_images_to_download">لا توجد صور لتنزيلها</string>
     <string name="app_theme">سمة التطبيق</string>
     <string name="team_surveys">استطلاعات الفريق</string>
+    <string name="select_courses">اختر الدورات</string>
 
 </resources>
