--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1174,12 +1174,13 @@
     <string name="assign_to">Assign To (Optional)</string>
     <string name="click_to_assign_member">Click to assign a team member</string>
     <string name="saving">Saving…</string>
-    <string name="achievement_saved">Achievement Updated</string>
+    <string name="achievement_saved">Achievement updated</string>
     <string name="team_name_already_exists">A team with this name already exists</string>
     <string name="enterprise_name_already_exists">An enterprise with this name already exists</string>
     <string name="downloading_images_please_check_notification">Downloading images, please check notification…</string>
     <string name="no_images_to_download">No images to download</string>
     <string name="app_theme">app theme</string>
     <string name="team_surveys">Team surveys</string>
+    <string name="enterprise_created">Enterprise created</string>
 
 </resources>
